Updated text, fixed column gap, added english values, refactored into mixin

--- a/src/styles/sections/values.scss
+++ b/src/styles/sections/values.scss
@@ -24,13 +24,15 @@
 
 .value-item {
 
+  padding-right: 20px;
+
   @media (min-width: $media-large) {
     width: 50%;
   }
 
   &__content {
     border-top: 2px solid #a79075;
-    padding: 30px 0;
+    padding: 30px 0px;
 
     @media (min-width: $media-large) {
       margin: 0 30px;
